ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/CDER_Log_Exception_Event__e.object-meta.xml
<CustomObject>
    <description>This platform event contains all information need for further Error Handling</description>
    <label>CDER Log Exception Event</label>
    <pluralLabel>CDER Log Exception Events</pluralLabel>
</CustomObject>