ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/ErrorCause__c.field-meta.xml
<CustomField>
    <fullName>ErrorCause__c</fullName>
    <label>ErrorCause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>