ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <label>ExceptionMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>