ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ExceptionStackTrace__c</fullName>
    <label>ExceptionStackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>