ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>