ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>LineNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>