ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Should contain the Origin Layer, e.g Salesforce or Mulesoft</description>
    <label>Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>