ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/OriginApplication__c.field-meta.xml
<CustomField>
    <fullName>OriginApplication__c</fullName>
    <label>OriginApplication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>