ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/OriginComponent__c.field-meta.xml
<CustomField>
    <fullName>OriginComponent__c</fullName>
    <label>OriginComponent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>