ErrorLogApp/main/default/objects/CDER_Log_Exception_Event__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>The ID of the record associated with a particular log entry.</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>